labour/test/invalid/invalid_duplicate_props.labour
// INVALID (property check): hold "0001" defines the shape property twice.
bouldering_wall "DupPropsWall" {
  routes [
    bouldering_route "double shape" {
      grade: "5A",
      grid_base_point { x: 0, y: 0 },
      holds ["0001", "0002"]
    }
  ],
  volumes [
    circle {
      pos: { x: 50, y: 50 },
      depth: 10,
      radius: 30,
      front_holds [
        hold "0001" {
          pos: { x: 0, y: 0 },
          shape: "1",
          shape: "2",
          colours [ red ],
          start_hold: 1
        },
        hold "0002" {
          pos: { x: 5, y: 5 },
          shape: "1",
          colours [ red ]
        }
      ]
    }
  ]
}
